File names updated and linked

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 -->
 
 <link rel="stylesheet" type="text/css" href="public/css/reset.css">
-<link rel="stylesheet" type="text/css" href="public/css/_.css">
+<link rel="stylesheet" type="text/css" href="public/css/stageCamera.css">
 
-<title>_</title>
+<title>Stage Camera Test</title>
 </head>
 
 <body onload="pageLoad_init();">
 
 
-<script type="text/javascript" src="public/js/_.js"></script>
+<script type="text/javascript" src="public/js/stageCamera.js"></script>
 </body>
 
 </html>
