Set up of Camera in css

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
 
 <body onload="pageLoad_init();">
 
+<div class="basic-wrapper">
+	
+	<div class="basic-inner">
+		
+		<div class="camera">
+			<div class="viewer"></div>
+		</div>
+	
+	</div>
+
+</div>
+
 
 <script type="text/javascript" src="public/js/stageCamera.js"></script>
 </body>
