Main static objects placed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 	<div class="basic-inner">
 		
 		<div class="camera">
-			<div class="viewer"></div>
+			<div class="viewer">
+				<div class="bg"></div>
+			</div>
 		</div>
 	
 	</div>
