viewerFind functionality added
Dynamic section class added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<div class="camera">
 			<div class="viewer">
 				<div class="bg"></div>
+				<div class="section section0"></div>
 			</div>
 		</div>
 	
