Center section working
Offset outline replaces border because it was adding extra height on the camera div

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 				<div class="bg"></div>
 				<div class="section section0"></div>
 			</div>
+			<div class="edge"></div>
 		</div>
 	
 	</div>
