Extra sections added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 			<div class="viewer">
 				<div class="bg"></div>
 				<div class="section section0"></div>
+				<div class="section section1"></div>
+				<div class="section section2"></div>
 			</div>
 			<div class="edge"></div>
 		</div>
