Dev test buttons added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
 
 </div>
 
+<div class="dev">
+	<ul>
+		<li class="t0" data-num="0"></li>
+		<li class="t1" data-num="1"></li>
+		<li class="t2" data-num="2"></li>
+	</ul>
+</div>
 
+<script type="text/javascript" src="public/js/dev.js"></script>
 <script type="text/javascript" src="public/js/stageCamera.js"></script>
 </body>
 
