Working version with dev buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div class="basic-inner">
 		
 		<div class="camera">
-			<div class="viewer">
+			<div class="viewer tween">
 				<div class="bg"></div>
 				<div class="section section0"></div>
 				<div class="section section1"></div>
