Blending tweaks of background

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 				<div class="section section0"></div>
 				<div class="section section1"></div>
 				<div class="section section2"></div>
+				<div class="blend"></div>
+				<div class="blend"></div>
+				<div class="blend"></div>
+				<div class="blend"></div>
 			</div>
 			<div class="edge"></div>
 		</div>
