Advanced width and height of ui using css calc

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<div class="basic-inner">
 		
 		<div class="camera">
+			
 			<div class="viewer tween">
 				<div class="bg"></div>
 				<div class="section section0"></div>
@@ -37,6 +38,16 @@
 				<div class="blend"></div>
 			</div>
 			<div class="edge"></div>
+			
+			<div class="ui">
+				<ul>
+					<li class="btn-u" data-direction="U"></li>
+					<li class="btn-d" data-direction="D"></li>
+					<li class="btn-l" data-direction="L"></li>
+					<li class="btn-r" data-direction="R"></li>
+				</ul>
+			</div>
+			
 		</div>
 	
 	</div>
