Inner ui css setup

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 			
 			<div class="ui">
 				<ul>
-					<li class="btn-u" data-direction="U"></li>
-					<li class="btn-d" data-direction="D"></li>
-					<li class="btn-l" data-direction="L"></li>
-					<li class="btn-r" data-direction="R"></li>
+					<li class="btn-u" data-direction="U"><div></div></li>
+					<li class="btn-d" data-direction="D"><div></div></li>
+					<li class="btn-l" data-direction="L"><div></div></li>
+					<li class="btn-r" data-direction="R"><div></div></li>
 				</ul>
 			</div>
 			
