Home start added
Selection focus var added to help resize on responsive

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				<div class="section section0"></div>
 				<div class="section section1"></div>
 				<div class="section section2"></div>
+				<div class="section section3"></div>
 				<div class="blend"></div>
 				<div class="blend"></div>
 				<div class="blend"></div>
@@ -59,6 +60,7 @@
 		<li class="t0" data-num="0"></li>
 		<li class="t1" data-num="1"></li>
 		<li class="t2" data-num="2"></li>
+		<li class="t3" data-num="3"></li>
 	</ul>
 </div>
 
