--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 			
 			<div class="viewer tween">
 				<div class="bg"></div>
-				<div class="section section0"></div>
-				<div class="section section1"></div>
-				<div class="section section2"></div>
-				<div class="section section3"></div>
+				<div class="section section0"><p>H</p></div>
+				<div class="section section1"><p>1</p></div>
+				<div class="section section2"><p>2</p></div>
+				<div class="section section3"><p>3</p></div>
 				<div class="blend"></div>
 				<div class="blend"></div>
 				<div class="blend"></div>
@@ -57,10 +57,10 @@
 
 <div class="dev">
 	<ul>
-		<li class="t0" data-num="0"></li>
-		<li class="t1" data-num="1"></li>
-		<li class="t2" data-num="2"></li>
-		<li class="t3" data-num="3"></li>
+		<li class="t0" data-num="0"><p>H</p></li>
+		<li class="t1" data-num="1"><p>1</p></li>
+		<li class="t2" data-num="2"><p>2</p></li>
+		<li class="t3" data-num="3"><p>3</p></li>
 	</ul>
 </div>
 
