UI default setting added

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 			
 			<div class="ui">
 				<ul>
-					<li class="btn-u" data-direction="U"><div></div></li>
-					<li class="btn-d" data-direction="D"><div></div></li>
-					<li class="btn-l" data-direction="L"><div></div></li>
-					<li class="btn-r" data-direction="R"><div></div></li>
+					<li class="btn-u btn-default" data-direction="U"><div></div></li>
+					<li class="btn-d btn-default" data-direction="D"><div></div></li>
+					<li class="btn-l btn-default" data-direction="L"><div></div></li>
+					<li class="btn-r btn-default" data-direction="R"><div></div></li>
 				</ul>
 			</div>
 			
