Code clean and seperate

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 -->
 
 <link rel="stylesheet" type="text/css" href="public/css/reset.css">
+<link rel="stylesheet" type="text/css" href="public/css/basic.css">
+<link rel="stylesheet" type="text/css" href="public/css/dev.css">
 <link rel="stylesheet" type="text/css" href="public/css/stageCamera.css">
 
 <title>Stage Camera Test</title>
@@ -42,10 +44,10 @@
 			
 			<div class="ui">
 				<ul>
-					<li class="btn-u btn-default" data-direction="U"><div></div></li>
-					<li class="btn-d btn-default" data-direction="D"><div></div></li>
-					<li class="btn-l btn-default" data-direction="L"><div></div></li>
-					<li class="btn-r btn-default" data-direction="R"><div></div></li>
+					<li class="ui-u ui-default" data-direction="U"><div></div></li>
+					<li class="ui-d ui-default" data-direction="D"><div></div></li>
+					<li class="ui-l ui-default" data-direction="L"><div></div></li>
+					<li class="ui-r ui-default" data-direction="R"><div></div></li>
 				</ul>
 			</div>
 			
